--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
           <div class="wrapper">
             <p class="helpline-title">For Further Inquires :</p>
 
-            <p class="helpline-number">+254 757 90 687</p>
+            <p class="helpline-number">+254 724 878 136</p>
           </div>
 
         </a>
@@ -2191,12 +2191,12 @@ input[type="radio"]:checked + .btn-option {
 
           <li class="contact-item">
             <ion-icon name="call-outline"></ion-icon>
-            <a href="tel:+254712345678" class="contact-link">+254 712 345 678</a>
+            <a href="tel:+254712345678" class="contact-link">+254 724 878 136</a>
           </li>
 
           <li class="contact-item">
             <ion-icon name="mail-outline"></ion-icon>
-            <a href="mailto:info@nairobijethouse.com" class="contact-link">info@nairobijethouse.com</a>
+            <a href="mailto:info@nairobijethouse.com" class="contact-link">nairobijethouse@gmail.com</a>
           </li>
 
           <li class="contact-item">
