--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -8,6 +8,15 @@
 <br>
 <br>
 <br>
+<div class="message-container" id="system-messages">
+    {% for message in messages %}
+    <div class="alert-message alert-{{ message.tags }}">
+        {{ message }}
+        <span class="close-message">&times;</span>
+    </div>
+    {% endfor %}
+</div>
+
 <section class="contact-section">
   <div class="container">
 
